...
            {/* --- ALTERNATIVE SOCIAL SIGN INS --- */}
            <AlternativeSignInOptionSection />

            {/* --- DIVIDER --- */}
            <View className="flex-row items-center my-4">
                <View className="flex-1 h-[1px] bg-neutral-800" />
                <Text className="text-neutral-500 text-xs px-3 font-semibold">OR CONTINUE WITH</Text>
                <View className="flex-1 h-[1px] bg-neutral-800" />
            </View>


            {/* CONTINUE WITH EMAIL DIALOG SECTION */}

...
